// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser associative array literals allows a mix of quoted and unquoted keys 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 30,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": 28,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": AALiteral {
      "close": Object {
        "isReserved": false,
        "kind": 5,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "}",
      },
      "elements": Array [
        Object {
          "name": BrsString {
            "kind": 2,
            "value": "foo",
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 1,
            },
          },
        },
        Object {
          "name": BrsString {
            "kind": 2,
            "value": "bar",
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 2,
            },
          },
        },
        Object {
          "name": BrsString {
            "kind": 2,
            "value": "requires-hypens",
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 3,
            },
          },
        },
      ],
      "open": Object {
        "isReserved": false,
        "kind": 4,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "{",
      },
    },
  },
]
`;

exports[`parser associative array literals allows separating properties with colons 1`] = `
Array [
  Function {
    "func": Function {
      "body": Block {
        "startingLocation": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [
          Assignment {
            "name": Object {
              "isReserved": false,
              "kind": 30,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "person",
            },
            "tokens": Object {
              "equals": Object {
                "isReserved": false,
                "kind": 28,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "=",
              },
            },
            "value": AALiteral {
              "close": Object {
                "isReserved": false,
                "kind": 5,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "}",
              },
              "elements": Array [
                Object {
                  "name": BrsString {
                    "kind": 2,
                    "value": "name",
                  },
                  "value": Literal {
                    "_location": Object {
                      "end": Object {
                        "column": -9,
                        "line": -9,
                      },
                      "start": Object {
                        "column": -9,
                        "line": -9,
                      },
                    },
                    "value": BrsString {
                      "kind": 2,
                      "value": "Bob",
                    },
                  },
                },
                Object {
                  "name": BrsString {
                    "kind": 2,
                    "value": "age",
                  },
                  "value": Literal {
                    "_location": Object {
                      "end": Object {
                        "column": -9,
                        "line": -9,
                      },
                      "start": Object {
                        "column": -9,
                        "line": -9,
                      },
                    },
                    "value": Int32 {
                      "kind": 3,
                      "value": 3,
                    },
                  },
                },
              ],
              "open": Object {
                "isReserved": false,
                "kind": 4,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "{",
              },
            },
          },
        ],
      },
      "end": Object {
        "isReserved": false,
        "kind": 57,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": 84,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": Array [],
      "returns": 10,
    },
    "name": Object {
      "isReserved": false,
      "kind": 30,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "main",
    },
  },
]
`;

exports[`parser associative array literals empty associative arrays on multiple lines 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 30,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": 28,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": AALiteral {
      "close": Object {
        "isReserved": false,
        "kind": 5,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "}",
      },
      "elements": Array [],
      "open": Object {
        "isReserved": false,
        "kind": 4,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "{",
      },
    },
  },
]
`;

exports[`parser associative array literals empty associative arrays on one line 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 30,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": 28,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": AALiteral {
      "close": Object {
        "isReserved": false,
        "kind": 5,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "}",
      },
      "elements": Array [],
      "open": Object {
        "isReserved": false,
        "kind": 4,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "{",
      },
    },
  },
]
`;

exports[`parser associative array literals filled arrays on multiple lines with commas 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 30,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": 28,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": AALiteral {
      "close": Object {
        "isReserved": false,
        "kind": 5,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "}",
      },
      "elements": Array [
        Object {
          "name": BrsString {
            "kind": 2,
            "value": "foo",
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 1,
            },
          },
        },
        Object {
          "name": BrsString {
            "kind": 2,
            "value": "bar",
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 2,
            },
          },
        },
        Object {
          "name": BrsString {
            "kind": 2,
            "value": "baz",
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 3,
            },
          },
        },
      ],
      "open": Object {
        "isReserved": false,
        "kind": 4,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "{",
      },
    },
  },
]
`;

exports[`parser associative array literals filled arrays on multiple lines without commas 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 30,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": 28,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": AALiteral {
      "close": Object {
        "isReserved": false,
        "kind": 5,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "}",
      },
      "elements": Array [
        Object {
          "name": BrsString {
            "kind": 2,
            "value": "foo",
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 1,
            },
          },
        },
        Object {
          "name": BrsString {
            "kind": 2,
            "value": "bar",
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 2,
            },
          },
        },
        Object {
          "name": BrsString {
            "kind": 2,
            "value": "baz",
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 3,
            },
          },
        },
      ],
      "open": Object {
        "isReserved": false,
        "kind": 4,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "{",
      },
    },
  },
]
`;

exports[`parser associative array literals filled arrays on one line 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 30,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": 28,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": AALiteral {
      "close": Object {
        "isReserved": false,
        "kind": 5,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "}",
      },
      "elements": Array [
        Object {
          "name": BrsString {
            "kind": 2,
            "value": "foo",
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 1,
            },
          },
        },
        Object {
          "name": BrsString {
            "kind": 2,
            "value": "bar",
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 2,
            },
          },
        },
        Object {
          "name": BrsString {
            "kind": 2,
            "value": "baz",
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 3,
            },
          },
        },
      ],
      "open": Object {
        "isReserved": false,
        "kind": 4,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "{",
      },
    },
  },
]
`;
